refa: make app index and repo index be the same level

--- a/package.json
+++ b/package.json
@@ -5,21 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server": "http-server ./app"
+    "server": "http-server ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JCPedroza/game-of-life-js.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["Conway", "Game", "Life"],
+  "author": "JCPedroza",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/JCPedroza/game-of-life-js/issues"
   },
   "homepage": "https://github.com/JCPedroza/game-of-life-js#readme",
   "devDependencies": {
-    "http-server": "^14.1.1",
-    "standard": "^17.0.0"
+    "http-server": "14.1.1",
+    "standard": "17.0.0"
   }
 }
